Add chapter 1 examples