@@ -6,6 +6,7 @@ import java.util.List;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.stream.Collectors;
 
 class UnsafeSequence {
     private int value;
@@ -36,10 +37,10 @@ class UnsafeSequenceTest {
             countDownLatch.countDown();
         });
         countDownLatch.await();
-        List<Integer> sameSeqList = seqList1.stream().filter(s1 -> seqList2.stream().anyMatch(s1::equals)).toList();
+        executorService.shutdown();
+        List<Integer> sameSeqList = seqList1.stream().filter(s1 -> seqList2.stream().anyMatch(s1::equals)).collect(Collectors.toList());
         if (!sameSeqList.isEmpty()) {
             System.out.println("Found the same value!");
-            sameSeqList.forEach(System.out::println);
         }
     }
 }
